tests/game_logic/snapshots/log__before anything.snap
---
created: "2019-09-18T11:15:46.355424429Z"
creator: insta@0.8.1
source: tests/game_logic/log.rs
expression: "&g"
---
{
  "log": []
}
